# platxa-skill-generator

./: .gitignore  .skillconfig  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
.claude-plugin/: marketplace.json
.claude/intents/: algorithmic-art.json  atlas.json  backend-development.json  best-practices.json  brainstorming.json  changelog-generator.json  cloudflare-deploy.json  code-documentation.json  code-refactoring.json  code-review.json  composition-patterns.json  content-research-writer.json  database-design.json  develop-web-game.json  dispatching-parallel-agents.json  doc.json  docx.json  executing-plans.json  figma-implement-design.json  figma.json  finishing-a-development-branch.json  frontend-design.json  gh-address-comments.json  gh-fix-ci.json  hugging-face-cli.json  hugging-face-datasets.json  hugging-face-evaluation.json  hugging-face-jobs.json  hugging-face-model-trainer.json  hugging-face-paper-publisher.json  hugging-face-tool-builder.json  hugging-face-trackio.json  imagegen.json  javascript-typescript.json  jupyter-notebook.json  linear.json  llm-application-dev.json  mcp-builder.json  netlify-deploy.json  notion-knowledge-capture.json  (+39 more)
.github/: pull_request_template.md
.github/workflows/: ci.yml  pages.yml  publish.yml  sync-catalog.yml  validate-catalog.yml  validate-skill.yml
catalog/: README.md  manifest.yaml
catalog/code-documenter/: SKILL.md
catalog/commit-message/: SKILL.md
catalog/overrides/: README.md
catalog/platxa-code-review/: SKILL.md
catalog/platxa-error-handling/: SKILL.md
catalog/platxa-frontend-builder/: SKILL.md
catalog/platxa-jwt-auth/: SKILL.md
catalog/platxa-k8s-ops/: SKILL.md
catalog/platxa-k8s-scaling/: SKILL.md
catalog/platxa-logging/: SKILL.md
catalog/platxa-monaco-config/: SKILL.md
catalog/platxa-monitoring/: SKILL.md
catalog/platxa-odoo-blog/: SKILL.md
catalog/platxa-odoo-form/: SKILL.md
docs/: getting-started.md  installation.md  troubleshooting.md
references/: state-schema.md
scripts/: _gen_skill.py  aggregate-benchmark.py  analyze-intents.py  audit-catalog.py  build-pages.py  check-dependencies.sh  check-duplicates.py  count-tokens.py  detect-circular-deps.sh  extract-skill-intent.py  generate-badges.py  generate-index.py  generate-readme.py  import-upstream.py  install-from-catalog.sh  install-skill.sh  list-installed.sh  optimize-description.py  package-skill.py  platxa-skills  regenerate-skill.sh  run-eval.sh  score-skill.py  security-check.sh  skill-graph.sh  sync-catalog.sh  test-scripts.sh  test-triggers.sh  validate-all.sh  validate-catalog-entry.sh  validate-frontmatter.sh  validate-skill.sh  validate-structure.sh
skills/: .sync-state.json  README.md  index.json  manifest.yaml  quality-report.csv  search-index.json
skills-regenerated/: COMPARISON.md  regeneration-report.json
tests/: conftest.py  helpers.py  test_audit_catalog.py  test_check_dependencies.py  test_check_duplicates.py  test_circular_deps.py  test_count_tokens.py  test_generate_badges.py  test_generate_index.py  test_install_catalog_filters.py  test_integration.py  test_platxa_skills_cli.py  test_regenerate_skill.py  test_score_skill.py  test_security_check.py  test_sync_catalog.py  test_validate_frontmatter.py  test_validate_skill_profile.py  test_validate_skill_thresholds.py  test_validate_structure.py
(+428 files in other folders)
